--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cordova-plugin-realtimeocr",
-  "version": "2.2.1",
+  "name": "RealTimeOCR",
+  "version": "0.0.1",
   "description": "Cordova RealTimeOCR Plugin",
   "cordova": {
     "id": "cordova-plugin-realtimeocr",
@@ -17,23 +17,6 @@
     "ecosystem:cordova"
     "cordova-ios"
   ],
-  "scripts": {
-    "test": "npm run jshint",
-    "jshint": "node node_modules/jshint/bin/jshint www && node node_modules/jshint/bin/jshint src && node node_modules/jshint/bin/jshint tests"
-  },
-  "engines": {
-    "cordovaDependencies": {
-      "0.1.0": {
-        "cordova": ">=3.0.0"
-      },
-      "3.0.0": {
-        "cordova": ">100"
-      }
-    }
-  },
-  "author": "Apache Software Foundation",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "jshint": "^2.6.0"
-  }
+  "author": "Yue Chen",
+  "license": "Apache-2.0"
 }
